--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
 <body>
     <header>
         <div class="menu">
-            <li>fuDDi CAFE</li>
-            <div class="menu2">
+            <div class="titulo1">
+                <li>fuDDi CAFE</li>
+            </div>
+            <div class="titulo2">
                 <li>Home</li>
                 <li>About Us</li>
                 <li>Product</li>
+            </div>
+            <div class="titulo3">
                 <li>Blog</li>
                 <li>Contact</li>
-                <li>Pages</li>
-            </div>   
+                <li>Pages</li> 
+            </div> 
         </div>
     </header>
 </body>
