--- a/index.html
+++ b/index.html
@@ -9,21 +9,39 @@
 </head>
 <body>
     <header>
+
+    <a href="#" class="logo">
+        <img src="./IMAGENS/logo.png" alt="logo">    
+    </a>
+
+    <a href="#" class="lupa">
+        <img src="./IMAGENS/lupa.png" alt="lupa">    
+    </a>
+
+
         <div class="menu">
             <div class="titulo1">
-                <li>fuDDi CAFE</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Product</a></li>
             </div>
             <div class="titulo2">
-                <li>Home</li>
-                <li>About Us</li>
-                <li>Product</li>
-            </div>
-            <div class="titulo3">
-                <li>Blog</li>
-                <li>Contact</li>
-                <li>Pages</li> 
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Pages</a></li> 
             </div> 
         </div>
     </header>
+
+    <main>
+        <a href="#" class="prato">
+            <img src="./IMAGENS/comida.png" alt="prato">    
+        </a>
+
+        <h1>Freshly</h1>
+        <h2>Roasted Coffee</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus consequuntur eligendi vero quasi, animi non ut sunt tempora facere laborum? Repellendus quaerat accusantium vitae consequuntur, saepe possimus voluptas et obcaecati?</p>
+        
+    </main>
 </body>
 </html>
