--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@700&display=swap" rel="stylesheet">
+   
+    <link href="https://fonts.googleapis.com/css2?family=Old+Standard+TT&display=swap" rel="stylesheet">
+
     <title>Layout - LIMA</title>
 </head>
 <body>
@@ -40,8 +46,7 @@
 
         <h1>Freshly</h1>
         <h2>Roasted Coffee</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus consequuntur eligendi vero quasi, animi non ut sunt tempora facere laborum? Repellendus quaerat accusantium vitae consequuntur, saepe possimus voluptas et obcaecati?</p>
-        
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting indutry. Lorem Ipsum has been the industry's standard dummy text</p>
     </main>
 </body>
 </html>
