--- a/index.html
+++ b/index.html
@@ -7,23 +7,26 @@
     <link rel="stylesheet" href="style.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
+
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@700&display=swap" rel="stylesheet">
-   
     <link href="https://fonts.googleapis.com/css2?family=Old+Standard+TT&display=swap" rel="stylesheet">
 
     <title>Layout - LIMA</title>
 </head>
 <body>
+
     <header>
+        <a href="#" class="barras">
+            <img src="./IMAGENS/barras.png" alt="barras">    
+        </a>
 
-    <a href="#" class="logo">
-        <img src="./IMAGENS/logo.png" alt="logo">    
-    </a>
+        <a href="#" class="logo">
+             <img src="./IMAGENS/logo.png" alt="logo">
+        </a>
 
-    <a href="#" class="lupa">
-        <img src="./IMAGENS/lupa.png" alt="lupa">    
-    </a>
-
+        <a href="#" class="lupa">
+            <img src="./IMAGENS/lupa.png" alt="lupa">    
+        </a>
 
         <div class="menu">
             <div class="titulo1">
@@ -40,13 +43,34 @@
     </header>
 
     <main>
-        <a href="#" class="prato">
-            <img src="./IMAGENS/comida.png" alt="prato">    
-        </a>
+        <div class="prato">
+            <img src="./IMAGENS/comida.png" alt="prato">  
+        </div>
 
-        <h1>Freshly</h1>
-        <h2>Roasted Coffee</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting indutry. Lorem Ipsum has been the industry's standard dummy text</p>
+        <div class="icones"> 
+            <img src="./IMAGENS/icone.png" alt="icone"> 
+        </div>
+
+        <div class="meio">
+            <h1>Freshly</h1>
+            <h2>Roasted Coffee</h2>
+        </div>
+
+        <div class="nes">
+            <h3 class="phone">+120 5462 563 564</h3>
+        </div>
+        
+
+        <p class="p1">Lorem Ipsum is simply dummy text of the printing and typesetting indutry. Lorem Ipsum has been the industry's standard dummy text</p>  
     </main>
+
+    <footer>
+        <button class="b1">Explore now</button>
+        <button class="b2">#</button>
+
+        <p class="pp1">Scorll now</p>
+
+        <p class="pp2">01/05</p>
+    </footer>
 </body>
 </html>
