--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="teste.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
 
@@ -16,30 +16,32 @@
 <body>
 
     <header>
-        <a href="#" class="barras">
-            <img src="./IMAGENS/barras.png" alt="barras">    
+
+        <a href="#" class="barra"> 
+            <img src="./IMAGENS/barras.png" alt="#">
         </a>
 
-        <a href="#" class="logo">
-             <img src="./IMAGENS/logo.png" alt="logo">
+        <a href="#" class="logo"> 
+            <img src="./IMAGENS/logo.png" alt="#">
         </a>
 
-        <a href="#" class="lupa">
-            <img src="./IMAGENS/lupa.png" alt="lupa">    
+        <a href="#" class="lupa"> 
+            <img src="./IMAGENS/lupa.png" alt="#">
         </a>
 
-        <div class="menu">
-            <div class="titulo1">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Product</a></li>
-            </div>
-            <div class="titulo2">
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Pages</a></li> 
-            </div> 
-        </div>
+        <nav class="menu">
+                <ul class="titulo1">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Product</a></li>
+                </ul>
+                <ul class="titulo2">
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Pages</a></li> 
+                </ul>
+             
+        </nav>
     </header>
 
     <main>
@@ -66,7 +68,7 @@
 
     <footer>
         <button class="b1">Explore now</button>
-        <button class="b2">#</button>
+        <button class="b2"></button>
 
         <p class="pp1">Scorll now</p>
 
